@@ -9,21 +9,35 @@ encode() { echo "$1" | tr ABC '\357\274\241'; }
 
 encode ABC >exp1
 encode aABC >exp2
+encode ABCABC >exp3
+encode _____________________ABCABC___ >exp4
 
 fail=0
 
 for LOC in en_US.UTF-8 $LOCALE_FR_UTF8; do
-  for type in dfa fgrep regex; do
-    case $type in
-      dfa) opt= prefix= ;;
-      fgrep) opt=-F prefix= ;;
-      regex) opt= prefix='\(\)\1' ;;
-    esac
-    out=out-$type-$LOC
-    LC_ALL=$LOC grep $opt "$prefix$(encode A)" exp1 >$out || fail=1
-    compare exp1 $out || fail=1
-    LC_ALL=$LOC grep $opt "$prefix$(encode aA)" exp2 >$out || fail=1
-    compare exp2 $out || fail=1
+  for pat in A aA BCA; do
+    for file in exp1 exp2 exp3 exp4; do
+      for type in regex dfa fgrep; do
+        case $type in
+          dfa) opt= prefix= ;;
+          fgrep) opt=-F prefix= ;;
+          regex) opt= prefix='\(\)\1' ;;
+        esac
+        pattern=$prefix$(encode $pat)
+        out=out-$type-$LOC
+        LC_ALL=$LOC grep $opt "$pattern" $file >$out
+        status=$?
+        echo $status >$out.status
+        if test $status -eq 0; then
+          compare $file $out
+        elif test $status -eq 1; then
+          compare_dev_null_ /dev/null $out
+        else
+          test $status -eq 2
+        fi || fail=1
+        compare out-regex-$LOC.status $out.status || fail=1
+      done
+    done
   done
 done
 
